[project]
name = "sampling-tung-tung-sahur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pyglet>=2.1.13",
    "trimesh>=4.11.3",
]
